--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
           <div class="post-text-box">
             <h1>Newest Post</h1>
             <section>
-                <h2>First Post</h2>
-                <p>The first post's content</p>
+                <h2>How to remove an eggplant from your ass</h2>
+                <p>Help please i dont know how</p>
              </section>
           </div>
           <div class="profile">
             <h1>About Me</h1>
             <img src="Images/Basketball.jpg">
-            <p>About the author</p>
+            <p>This is me</p>
          </div>
        </div>        
     </main>
