updated content new

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
           <div class="post-text-box">
             <h1>Newest Post</h1>
             <section>
-                <h2>How to remove an eggplant from your ass</h2>
-                <p>Help please i dont know how</p>
+                <h2>How do you remove an eggplant from your ass???</h2>
+                <p>Help</p>
              </section>
           </div>
           <div class="profile">
