--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <header>   
         <h1>Ryan's Test Blog</h1>
         <nav>
-            <a href="domain.tld/home">Home</a>
-            <a href="domain.tld/blog">Blog</a>
-            <a href="domain.tld/about">About</a>
+            <a href="https://ritrix.github.io/first_Website/home">Home</a>
+            <a href="https://en.wikipedia.org/wiki/Blog">Blog</a>
+            <a href="https://ritrix.github.io/first_Website/about">About</a>
          </nav>
     </header>
 
