--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>   
         <h1>Ryan's Test Blog</h1>
         <nav>
-            <a href="https://ritrix.github.io/first_Website/home">Home</a>
+            <a href="https://ritrix.github.io/first_Website/domain.tld/home">Home</a>
             <a href="https://en.wikipedia.org/wiki/Blog">Blog</a>
             <a href="https://ritrix.github.io/first_Website/about">About</a>
          </nav>
