--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav>
             <a href="https://ritrix.github.io/first_Website/domain.tld/home">Home</a>
             <a href="https://en.wikipedia.org/wiki/Blog">Blog</a>
-            <a href="https://ritrix.github.io/first_Website/about">About</a>
+            <a href="https://ritrix.github.io/first_Website/domain.tld/about">About</a>
          </nav>
     </header>
 
