fix home and about

--- a/about.html
+++ b/about.html
@@ -2,13 +2,13 @@
 <html>
    <head>
         <link rel="stylesheet" href="CSS/style.css">
-        <title>Ryans Test Blog</title>
+        <title>Ryans Test Blog About</title>
    </head>
    <body>
 
 
     <header>   
-        <h1>Ryan's Test Blog</h1>
+        <h1>About</h1>
         <nav>
             <a href="https://ritrix.github.io/first_Website/index">Main</a>
          </nav>
