--- a/home.html
+++ b/home.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
    <head>
-        <title>Ryans Test Blog Home</title>
-   </head>
+      <link rel="stylesheet" href="CSS/style.css">
+      <title>Ryans Test Blog Home</title>
+ </head>
    <body>
 
 
