--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
    <head>
-        <link rel="stylesheet" href="CSS/style.css">
-        <title>Ryans Test Blog</title>
+         <base href="/" />
+         <link rel="stylesheet" href="CSS/style.css">
+         <title>Ryans Test Blog</title>
    </head>
    <body>
 
