--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <header>   
         <h1>Ryan's Test Blog</h1>
         <nav>
-            <a href="/home.html">Home</a>
+            <a href="./home.html">Home</a>
             <a href="https://en.wikipedia.org/wiki/Blog">Blog</a>
-            <a href="/about.html">About</a>
+            <a href="./about.html">About</a>
          </nav>
     </header>
 
