--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
    <head>
          <link rel="stylesheet" href="CSS/style.css">
          <title>Ryans Test Blog</title>
+         <base href="/ritrix.github.io/first_Website">
    </head>
    <body>
 
