--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <header>   
         <h1>Ryan's Test Blog</h1>
         <nav>
-            <a href="./home.html">Home</a>
+            <a href="/home.html">Home</a>
             <a href="https://en.wikipedia.org/wiki/Blog">Blog</a>
-            <a href="./about.html">About</a>
+            <a href="/about.html">About</a>
          </nav>
     </header>
 
@@ -28,7 +28,7 @@
           </div>
           <div class="profile">
             <h1>About Me</h1>
-            <img src="Images/Basketball.jpg">
+            <img src="./Images/Basketball.jpg">
             <p>This is me</p>
          </div>
        </div>        
