--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
    <head>
          <link rel="stylesheet" href="CSS/style.css">
          <title>Ryans Test Blog</title>
-         <base href="/ritrix.github.io/first_Website">
    </head>
    <body>
 
@@ -13,7 +12,7 @@
         <nav>
             <a href="/home.html">Home</a>
             <a href="https://en.wikipedia.org/wiki/Blog">Blog</a>
-            <a href="/about.html">About</a>
+            <a href="about.html">About</a>
          </nav>
     </header>
 
@@ -28,7 +27,7 @@
           </div>
           <div class="profile">
             <h1>About Me</h1>
-            <img src="./Images/Basketball.jpg">
+            <img src="Images/Basketball.jpg">
             <p>This is me</p>
          </div>
        </div>        
