--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <div class="post-text-box">
             <h1>Newest Post</h1>
             <section>
-                <h2>How do you remove an eggplant from your ass???</h2>
+                <h2>How do you stop a house fire???</h2>
                 <p>Help</p>
              </section>
           </div>
